syntax = "proto3";

package cb.users;

import "common.proto";

service UsersService {
  rpc FindUser(FindUserRequest) returns (FindUserResponse) {}
  rpc EditProfile(EditProfileRequest) returns (EditProfileResponse) {}
  rpc GetAllUsers(cb.common.Empty) returns (GetAllUsersResponse) {}
}

message FindUserRequest {
  int32 userId = 1;
}

message UserData {
  int32 id = 1;
  bool verified = 2;
  string email = 3;
  string createdAt = 7;
  string updatedAt = 8;
  string authWay = 9;
}

message FindUserResponse {
  optional UserData user = 1;
}

message EditProfileRequest {
  string email = 1;
  string password = 1;
}

message EditProfileResponse {
  optional string error = 1;
  bool ok = 2;
}

message GetAllUsersResponse {
  repeated UserData users = 1;
}